
	* Don't swtich to become primary router if we are backup if
	  decryption error has occurred.  Affected file silcd/server.c.

	* Fixed a bug in backup router IP address comparison in
	  silc_server_backup_get.

	  Save now also the port of the server/router and use that
	  in comparison as well.  Affected file silcd/server_backup.c.

Thu Sep 26 13:51:02 CEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* If packet processing fails (like integrity check fails)
	  the connection is closed now.  Affected files are
	  lib/silccore/silcpacket.c and silcd/server.c.

Mon Sep 23 10:59:39 CEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed double free in RSA public key set function
	  silc_rsa_set_public_key.  Affected file lib/silccrypt/rsa.c.
	  Bug #29.

Sun Sep 22 14:54:05 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Rewrote WHOIS, WHOWAS and IDENTIFY commands in the server.
	  Added server_query.[ch] which provides one interface for
	  querying information using all three commands.

	* Changed all "typedef unsigned char" in core library to
	  "typedef SilcUInt8".

Sat Sep 21 21:36:45 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_strncat into lib/silcutil/silcstrutil.[ch].

	* Renamed silc_server_get_client_resolve to
	  silc_server_query_resolve and moved to server_query.[ch].

Wed Sep 18 18:28:04 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Resumed client packet handling from server put the resumed
	  client on wrong list on router and caused the client not
	  be present on the network anymore.  Now fixed to put the
	  client to correct list.  Affected file silcd/packet_receive.c.

Wed Sep 18 15:13:48 CEST 2002  Johnny Mnemonic <johnny@themnemonic.org>

	* Various cleanup in error message output in config parsing code
	  and in server init code.  Fixed error log files containing
	  too many newlines ('\n') in some situations.  Affected files are
	  silcd/serverconfig.c, silcd/silcd.c, and silcd/server.c.
