@@ -9,6 +9,9 @@ Sun Oct  6 16:48:32 EEST 2002  Pekka Riikonen <priikone@silcnet.org>
 	  Save now also the port of the server/router and use that
 	  in comparison as well.  Affected file silcd/server_backup.c.
 
+	* Normal server now reconnects to backup router automatically
+	  if connection is lost to it.  Affected file silcd/server.c.
+
 Thu Sep 26 13:51:02 CEST 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* If packet processing fails (like integrity check fails)
